--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </ul>
       <h1>NFT Drop Coming Soon!!</h1>
 
-      <p>A new batch of cute cats will be available very soon!</p>
+      <p>A new batch of persons will be available very soon!</p>
       <a href="https://opensea.io/collection/nftpersons" target="_blank" rel="noopener noreferrer" class="hero-btn btn"><span>Purchase Items</span>
       </a>
     </div>
